fix overflow-x on body

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -40,6 +40,7 @@ body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   background: white !important;
+  overflow-x: hidden;
 
   &.blocked {
     overflow: hidden;
